--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,39 @@
+asgiref==3.3.1
 bleach==3.1.0
 bootstrap-admin==0.4.3
 certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==2.1.4
 django-allauth==0.40.0
 django-appconf==1.0.3
+django-bootstrap3==6.2.2
 django-crispy-forms==1.7.2
 django-haystack==2.8.1
+django-heroku==0.3.1
 django-imagekit==4.0.2
 django-redis==4.10.0
+django-utils==0.0.2
 djangorestframework==3.10.3
 emoji==0.5.4
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.8
+image==1.5.33
+imagecolor==1.2.1
 jieba==0.39
 Markdown==3.1.1
 oauthlib==3.1.0
 olefile==0.46
 pilkit==2.0
 Pillow==7.2.0
+psycopg2==2.8.6
 Pygments==2.4.2
 PyMySQL==0.9.3
-pytz==2019.2
-redis==3.3.8
-requests==2.22.0
-requests-oauthlib==1.2.0
-six==1.12.0
-sqlparse==0.3.0
-urllib3==1.25.3
+python-memcached==1.59
+python3-memcached==1.51
 python3-openid==3.1.0
 pytz==2019.2
 redis==3.3.8
@@ -37,7 +41,11 @@ requests==2.22.0
 requests-oauthlib==1.2.0
 six==1.12.0
 sqlparse==0.3.0
+static3==0.7.0
+style==1.1.0
+update==0.0.1
 urllib3==1.25.3
 user-agent==0.1.9
 webencodings==0.5.1
+whitenoise==5.2.0
 Whoosh==2.7.4
